// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render the component 1`] = `
<Fragment>
  <input
    checked={false}
    id="myId"
    name="myName"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="myId"
  >
    My Checkbox
  </label>
</Fragment>
`;

exports[`<Checkbox /> should render the component with \`initial value\` 1`] = `
<Fragment>
  <input
    checked={true}
    id="myId"
    name="myName"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="myId"
  >
    My Checkbox
  </label>
</Fragment>
`;
